fix wrong color

--- a/src/app/components/Spinner/index.module.scss
+++ b/src/app/components/Spinner/index.module.scss
@@ -21,19 +21,19 @@
 
       &:nth-child(1) {
         top: 0;
-        background: linear-gradient(rgb(255, 79, 79, .3), rgb(255, 79, 79, .2));
+        background: linear-gradient(rgba(255, 79, 79, .3), rgba(255, 79, 79, .2));
       }
 
       &:nth-child(2) {
         left: 0;
         bottom: 0;
-        background: linear-gradient(rgba(19, 19, 255, .3), rgb(19, 19, 255, .2));
+        background: linear-gradient(rgba(19, 19, 255, .3), rgba(19, 19, 255, .2));
       }
 
       &:nth-child(3) {
         right: 0;
         bottom: 0;
-        background: linear-gradient(rgb(255, 255, 0, .3), rgb(255, 255, 0, .2));
+        background: linear-gradient(rgba(255, 255, 0, .3), rgba(255, 255, 0, .2));
       }
     }
   }
