--- a/src/app/components/TV/index.module.scss
+++ b/src/app/components/TV/index.module.scss
@@ -16,17 +16,17 @@
     right: 2rem;
 
     &:nth-child(1) {
-      background: linear-gradient(rgb(255, 79, 79, .3), rgb(255, 79, 79, .2));
+      background: linear-gradient(rgba(255, 79, 79, .3), rgba(255, 79, 79, .2));
       top: 6rem;
     }
 
     &:nth-child(2) {
-      background: linear-gradient(rgba(19, 19, 255, .3), rgb(19, 19, 255, .2));
+      background: linear-gradient(rgbaa(19, 19, 255, .3), rgba(19, 19, 255, .2));
       top: 9rem;
     }
 
     &:nth-child(3) {
-      background: linear-gradient(rgb(255, 255, 0, .3), rgb(255, 255, 0, .2));
+      background: linear-gradient(rgba(255, 255, 0, .3), rgba(255, 255, 0, .2));
       top: 12rem;
     }
   }
@@ -43,32 +43,32 @@
 
 @keyframes screenShining {
   from {
-    background: linear-gradient(rgb(255, 255, 255, 0.4), rgb(255, 255, 255, 0.3));
+    background: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.3));
   }
   to {
-    background: linear-gradient(rgb(255, 255, 255, 0.5), rgb(255, 255, 255, 0.4));
-    box-shadow: 0 0 1rem 1rem rgb(211, 211, 211, 0.1);
+    background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.4));
+    box-shadow: 0 0 1rem 1rem rgba(211, 211, 211, 0.1);
   }
 }
 
 @keyframes tvShining {
   0% {
-    background:linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.1));
+    background:linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1));
   }
   20% {
-    background:linear-gradient(rgb(0, 0, 0, 0.12), rgb(0, 0, 0, 0.12));
+    background:linear-gradient(rgba(0, 0, 0, 0.12), rgba(0, 0, 0, 0.12));
   }
   40% {
-    background:linear-gradient(rgb(0, 0, 0, 0.14), rgb(0, 0, 0, 0.14));
+    background:linear-gradient(rgba(0, 0, 0, 0.14), rgba(0, 0, 0, 0.14));
   }
   60% {
-    background:linear-gradient(rgb(0, 0, 0, 0.16), rgb(0, 0, 0, 0.16));
+    background:linear-gradient(rgba(0, 0, 0, 0.16), rgba(0, 0, 0, 0.16));
   }
   80% {
-    background:linear-gradient(rgb(0, 0, 0, 0.18), rgb(0, 0, 0, 0.18));
+    background:linear-gradient(rgba(0, 0, 0, 0.18), rgba(0, 0, 0, 0.18));
   }
   100% {
-    background:linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.1));
+    background:linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1));
   }
 }
 
@@ -88,17 +88,17 @@
       right: .7rem;
 
       &:nth-child(1) {
-        background: linear-gradient(rgb(255, 79, 79, .3), rgb(255, 79, 79, .2));
+        background: linear-gradient(rgba(255, 79, 79, .3), rgba(255, 79, 79, .2));
         top: 3rem;
       }
 
       &:nth-child(2) {
-        background: linear-gradient(rgba(19, 19, 255, .3), rgb(19, 19, 255, .2));
+        background: linear-gradient(rgbaa(19, 19, 255, .3), rgba(19, 19, 255, .2));
         top: 4.5rem;
       }
 
       &:nth-child(3) {
-        background: linear-gradient(rgb(255, 255, 0, .3), rgb(255, 255, 0, .2));
+        background: linear-gradient(rgba(255, 255, 0, .3), rgba(255, 255, 0, .2));
         top: 6rem;
       }
     }
