--- a/src/app/page/Home/index.module.scss
+++ b/src/app/page/Home/index.module.scss
@@ -22,13 +22,13 @@
   background: linear-gradient(rgb(0, 45, 83), rgb(0, 45, 83));
   box-shadow: .5rem .5rem 0 .1rem rgb(0, 45, 83);
   transition: all .1s;
-  color: rgb(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.5);
 
   &:hover {
     box-shadow: none;
     margin-left: .5em;
     margin-top: .5em;
-    color: rgb(255, 255, 255, 0.7);
-    border-color: rgb(255, 255, 255, 0.7);
+    color: rgba(255, 255, 255, 0.7);
+    border-color: rgba(255, 255, 255, 0.7);
   }
 }
